--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 //Var Global
 
 $global-font-family : 'Open Sans', sans-serif;
-$global-background-color: #8D8D8D;
-$global-background-color-secondary: #B3B3B3;
+$global-background-color: #C2C2D6;
+$global-background-color-secondary: #000000;
 $global-background-color-tertiary: #808080;
 $global-background-border-color: #FFA500;
 
