--- a/src/App.scss
+++ b/src/App.scss
@@ -9,12 +9,14 @@
   margin: 0 auto;
   padding: .6rem;
   @extend .overflow-clip;
+  border: 1px solid $global-background-color;
 
   .App-Main {
     display: grid;
-    grid-template-rows: .6fr 2fr 2fr;
+    grid-template-rows: .8fr 3fr 2fr;
     width: 100%;
     height: 100%;
+    
 
     .App-header {
       width: 100%;
@@ -66,6 +68,10 @@
 
   }
   
+}
+
+.App-footer {
+  text-align: center;
 }
 
 @media screen and (min-width: 900px) {
