--- a/src/scss/abstracts/_functions.scss
+++ b/src/scss/abstracts/_functions.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 .box-shadow {
     box-shadow: 4px 4px 2px 1px rgba(0, 0, 0, 0.1);
 }
@@ -16,4 +18,20 @@
 
 .text-right {
     text-align: right;
+}
+
+.background-color-btn {
+    background-color: $background-color-btn;
+}
+
+.background-btn-secondary {
+    background-color: $background-color-btn-secondary;
+}
+
+.background-btn-third {
+    background-color: $background-color-btn-third;
+}
+
+.background-btn-fourth {
+    background-color: $background-color-btn-fourth;
 }
