--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -3,16 +3,11 @@
 $global-font-family : 'Open Sans', sans-serif;
 $global-background-color: #C2C2D6;
 $global-background-color-secondary: #000000;
-$global-background-color-tertiary: #808080;
-$global-background-border-color: #FFA500;
+
 
 //Var Utilites
 
-$background-switch-color: #1C1C1C;
-$background-switch-btn-color: blue;
-$background-volume-white-color: #fff;
-
-$background-color-volume: #3071a9;
-$background-color-volume-secondary: #367ebd;
-$box-shadow-volume: #000000;
-$box-shadow-volume-s: #0d0d0d;
+$background-color-btn: #4D4D4D;
+$background-color-btn-secondary: #666666;
+$background-color-btn-third: #AC3939;
+$background-color-btn-fourth: #004466;
